--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@mantine/core": "^7.13.3",
     "@mantine/form": "^7.13.3",
     "@mantine/hooks": "^7.13.3",
+    "@tabler/icons-react": "^3.22.0",
     "embla-carousel-react": "^7.1.0",
+    "framer-motion": "^11.11.10",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
