--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-config-next": "15.1.0",
     "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
+    "sass-embedded": "^1.83.0",
     "typescript": "^5.7.2"
   },
   "resolutions": {
