--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean-next": "rm -rf .next"
   },
   "dependencies": {
     "@mantine/carousel": "^7.15.1",
