--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mantine/hooks": "^7.15.1",
     "@tabler/icons-react": "^3.24.0",
     "embla-carousel-react": "^8.5.1",
-    "framer-motion": "^11.14.4",
+    "motion": "^11.18.1",
     "next": "15.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
