--- a/package.json
+++ b/package.json
@@ -3,22 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean-next": "rm -rf .next"
+    "clean": "yarn clean:next && yarn clean:node_modules",
+    "clean:next": "rm -rf .next",
+    "clean:node_modules": "rm -rf node_modules",
+    "docker:up": "docker-compose up",
+    "generate:importmap": "NODE_OPTIONS=--no-deprecation payload generate:importmap",
+    "generate:types": "NODE_OPTIONS=--no-deprecation payload generate:types"
   },
   "dependencies": {
     "@mantine/carousel": "^7.15.1",
     "@mantine/core": "^7.15.1",
     "@mantine/form": "^7.15.1",
     "@mantine/hooks": "^7.15.1",
-    "@tabler/icons-react": "^3.24.0",
+    "@payloadcms/db-vercel-postgres": "^3.25.0",
+    "@payloadcms/storage-vercel-blob": "^3.25.0",
+    "@payloadcms/next": "^3.25.0",
+    "@payloadcms/payload-cloud": "^3.25.0",
+    "@payloadcms/richtext-lexical": "^3.25.0",
+    "@tabler/icons-react": "^3.25.0",
     "embla-carousel-react": "^8.5.1",
+    "graphql": "^16.8.1",
     "lenis": "^1.1.20",
     "motion": "^11.18.1",
-    "next": "15.1.0",
+    "next": "15.2.0",
+    "payload": "^3.25.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
