--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "clean:next": "rm -rf .next",
     "clean:node_modules": "rm -rf node_modules",
     "docker:up": "docker-compose up",
-    "generate:importmap": "NODE_OPTIONS=--no-deprecation payload generate:importmap",
-    "generate:types": "NODE_OPTIONS=--no-deprecation payload generate:types",
+    "generate:importmap": "payload generate:importmap",
+    "generate:types": "payload generate:types",
     "ci": "payload migrate && yarn build"
   },
   "dependencies": {
