--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
       }
     ],
     "paths": {
-      "@payload-config": ["./payload.config.ts"],
+      "@payload-config": ["./src/payload.config.ts"],
       "react": ["./node_modules/@types/react"],
       "@/*": ["./src/*"]
     }
