--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
-    "build": "NODE_OPTIONS=--no-deprecation next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "clean": "yarn clean:next && yarn clean:node_modules",
@@ -16,25 +16,25 @@
     "docker:up": "docker-compose up",
     "generate:importmap": "payload generate:importmap",
     "generate:types": "payload generate:types",
-    "ci": "payload migrate && yarn build"
+    "ci": "NODE_OPTIONS=--no-deprecation payload migrate && yarn generate:importmap && yarn build"
   },
   "dependencies": {
     "@mantine/carousel": "^7.15.1",
     "@mantine/core": "^7.15.1",
     "@mantine/form": "^7.15.1",
     "@mantine/hooks": "^7.15.1",
-    "@payloadcms/db-vercel-postgres": "^3.25.0",
-    "@payloadcms/storage-vercel-blob": "^3.25.0",
-    "@payloadcms/next": "^3.25.0",
-    "@payloadcms/payload-cloud": "^3.25.0",
-    "@payloadcms/richtext-lexical": "^3.25.0",
-    "@tabler/icons-react": "^3.25.0",
+    "@payloadcms/db-vercel-postgres": "3.24.0",
+    "@payloadcms/storage-vercel-blob": "3.24.0",
+    "@payloadcms/next": "3.24.0",
+    "@payloadcms/payload-cloud": "3.24.0",
+    "@payloadcms/richtext-lexical": "3.24.0",
+    "@tabler/icons-react": "3.24.0",
     "embla-carousel-react": "^8.5.1",
     "graphql": "^16.8.1",
     "lenis": "^1.1.20",
     "motion": "^11.18.1",
     "next": "15.2.0",
-    "payload": "^3.25.0",
+    "payload": "3.24.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
